[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://FatiguePhysical.gd" type="Script" id=2]

[node name="FatiguePhysical" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 37.5
margin_right = -312.0
margin_bottom = -37.5
rect_min_size = Vector2( 400, 525 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 3.0
margin_right = 397.0
margin_bottom = 522.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 368.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question1" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "Do you feel tired?"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider1" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 38.0
margin_right = 333.0
margin_bottom = 69.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 81.0
margin_right = 86.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 90.0
margin_right = 163.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 167.0
margin_right = 255.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 259.0
margin_right = 331.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 73.0
margin_right = 333.0
margin_bottom = 87.0
text = "Do you feel that you need more rest?"

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 91.0
margin_right = 333.0
margin_bottom = 107.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider2" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer11" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 111.0
margin_right = 333.0
margin_bottom = 142.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 81.0
margin_right = 86.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 90.0
margin_right = 163.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 167.0
margin_right = 255.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 259.0
margin_right = 331.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question3" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 146.0
margin_right = 333.0
margin_bottom = 160.0
text = "Do you feel sleepy or drowsy?"

[node name="HBoxContainer12" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 164.0
margin_right = 333.0
margin_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider3" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer13" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 184.0
margin_right = 333.0
margin_bottom = 215.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 81.0
margin_right = 86.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 90.0
margin_right = 163.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 167.0
margin_right = 255.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 259.0
margin_right = 331.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question4" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 219.0
margin_right = 333.0
margin_bottom = 233.0
text = "Do you feel that it is difficult to start things?"

[node name="HBoxContainer14" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 237.0
margin_right = 333.0
margin_bottom = 253.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer14"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider4" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer14"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer14"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer15" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 257.0
margin_right = 333.0
margin_bottom = 288.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer15"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer15"]
margin_left = 81.0
margin_right = 86.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer15"]
margin_left = 90.0
margin_right = 163.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer15"]
margin_left = 167.0
margin_right = 255.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer15"]
margin_left = 259.0
margin_right = 331.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question5" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 292.0
margin_right = 333.0
margin_bottom = 323.0
text = "Do you start things without difficulty but get
weak as you go on?"

[node name="HBoxContainer16" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 327.0
margin_right = 333.0
margin_bottom = 343.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer16"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider5" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer16"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer16"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer17" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 347.0
margin_right = 333.0
margin_bottom = 378.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer17"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer17"]
margin_left = 81.0
margin_right = 86.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer17"]
margin_left = 90.0
margin_right = 163.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer17"]
margin_left = 167.0
margin_right = 255.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer17"]
margin_left = 259.0
margin_right = 331.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 382.0
margin_right = 333.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 396.0
margin_right = 333.0
margin_bottom = 416.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 122.0
margin_right = 164.0
margin_bottom = 20.0
text = "Back"

[node name="NextButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_right = 210.0
margin_bottom = 20.0
text = "Next"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider1" to="." method="_on_HSlider1_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer10/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer12/HSlider3" to="." method="_on_HSlider3_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer14/HSlider4" to="." method="_on_HSlider4_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer16/HSlider5" to="." method="_on_HSlider5_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer2/NextButton" to="." method="_on_Button_button_up"]
